# TFG_AI-Software-Architecture-Agent

./: .env.example  .gitignore  Cheatsheet.txt  Cheatsheet_comandos.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: DOCUMENTACION_TECNICA_MULTIAGENTE.md  MANUAL_USO_MONOAGENTE.md  PUNTO_DE_PARTIDA.md
docs/resultados/: MonoAgente_GPT-5.2_22-03-2026.md  MonoAgente_Sonnet4.6_29-03-2026_appPodcasts.md  Multiagente_GPT-4o-mini_12-04-2026_appPodcasts.md  Multiagente_GPT-5.2_18-04-2026_appPodcasts.md
frontend/: app.py
src/: config.py  main.py
src/agents/: architecture_designer.py  base.py  planner.py  requirements_tech_stack.py  single_agent.py  validator_aggregator.py
src/api/: routes.py
src/db/: connection.py  repositories.py
src/llm/: models.py  prompts.py  providers.py
src/memory/: embeddings.py  vector_store.py
src/models/: input.py  metrics.py  output.py  project.py
src/orchestration/: graph.py  single_graph.py  state.py
src/utils/: cost.py  file_processing.py  logging.py  parsers.py  pdf.py
tests/: conftest.py
tests/test_agents/: test_single_agent.py
tests/test_api/: test_baseline.py  test_health.py
tests/test_orchestration/: test_single_graph.py
